# mj

./: CMakeLists.txt  README.md  mj.code-workspace
cmake/: Mumbly.cmake  mj.cmake  mjConfig.cmake.in
include/mj/: algorithm.hpp  console.hpp  iterator.hpp  lambda.hpp  math.hpp  mj.hpp  nameof.hpp  pool.hpp  size.hpp  string.hpp  timer.hpp
src/: mj.cpp
tests/: CMakeLists.txt  algorithm_tests.cpp  math_tests.cpp  nameof_tests.cpp  pool_tests.cpp  size_tests.cpp
